--- a/styles/main.css
+++ b/styles/main.css
@@ -1,27 +1,62 @@
-
-.app-container{
+.app-container {
     width: 100%;
     height: 100%;
 }
 
-.header-container{
-    background-color: aqua;
-    height: 10vh
+.header-container {
+    display: flex;
+
+    height: 10vh;
+    border-bottom: solid blueviolet;
 }
 
-.workspace-container{
+.logo-container {
+    margin-right: auto;
+}
+
+.app-logo {
+    border-right: groove blueviolet;
+    border-radius: 9999px;
+}
+
+.app-title-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.app-title {}
+
+
+.workspace-container {
     display: flex;
     flex-direction: row;
 }
 
-.wallet-container{
-    background-color: blue;
+.wallet-container {
+    width: 50vw;
+    height: 100vh;
+    border-right-style: groove;
+    border-color: blueviolet;
+}
+
+.wallet-title-container {
+    display: flex;
+    justify-content: center;
+}
+
+.wallet-title {}
+
+
+
+.shop-container {
     width: 50vw;
     height: 100vh;
 }
 
-.shop-container{
-    background-color:blueviolet;
-    width: 50vw;
-    height: 100vh;
+.shop-title-container {
+    display: flex;
+    justify-content: center;
 }
+
+.shop-title {}
