--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
     display: flex;
 
     height: 10vh;
-    border-bottom: solid blueviolet;
+    border-bottom: solid blue;
 }
 
 .logo-container {
@@ -15,7 +15,7 @@
 }
 
 .app-logo {
-    border-right: groove blueviolet;
+    border-right: groove blue;
     border-radius: 9999px;
 }
 
@@ -37,7 +37,7 @@
     width: 50vw;
     height: 100vh;
     border-right-style: groove;
-    border-color: blueviolet;
+    border-color: blue;
 }
 
 .wallet-title-container {
@@ -46,6 +46,105 @@
 }
 
 .wallet-title {}
+
+.balance-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.balance{
+    margin-left: 10vw;
+}
+
+.deposit-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+/* CSS */
+.wallet-button {
+  margin-left: 2vw;
+  align-items: center;
+  background-color: #0A66C2;
+  border: 0;
+  border-radius: 100px;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 20px;
+  max-width: 480px;
+  min-height: 40px;
+  min-width: 0px;
+  overflow: hidden;
+  padding: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  touch-action: manipulation;
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+}
+
+.wallet-button:hover,
+.wallet-button:focus { 
+  background-color: #16437E;
+  color: #ffffff;
+}
+
+.wallet-button:active {
+  background: #09223b;
+  color: rgb(255, 255, 255, .7);
+}
+
+.wallet-button:disabled { 
+  cursor: not-allowed;
+  background: rgba(0, 0, 0, .08);
+  color: rgba(0, 0, 0, .3);
+}
+
+
+.convert-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.to-euro-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 4vh;
+}
+
+.to-dollar-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.conversion-info-container{
+    
+}
+.conversion-info-link{
+    
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -60,3 +159,12 @@
 }
 
 .shop-title {}
+
+.search-container{
+
+}
+.search-bar{
+    margin-left: 4vw;
+    height: 5vh;
+    width: 40vw;
+}
