--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+body {
+    font-family: sans-serif;
+}
+
 .app-container {
     width: 100%;
     height: 100%;
@@ -47,17 +51,18 @@
 
 .wallet-title {}
 
-.balance-container{
+.balance-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
 }
-.balance{
+
+.balance {
     margin-left: 10vw;
 }
 
-.deposit-container{
+.deposit-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -66,77 +71,74 @@
 
 /* CSS */
 .wallet-button {
-  margin-left: 2vw;
-  align-items: center;
-  background-color: #0A66C2;
-  border: 0;
-  border-radius: 100px;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  justify-content: center;
-  line-height: 20px;
-  max-width: 480px;
-  min-height: 40px;
-  min-width: 0px;
-  overflow: hidden;
-  padding: 0px;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
-  touch-action: manipulation;
-  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
+    margin-left: 2vw;
+    align-items: center;
+    background-color: #0A66C2;
+    border: 0;
+    border-radius: 100px;
+    box-sizing: border-box;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    justify-content: center;
+    line-height: 20px;
+    max-width: 480px;
+    min-height: 40px;
+    min-width: 0px;
+    overflow: hidden;
+    padding: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    touch-action: manipulation;
+    transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: middle;
 }
 
 .wallet-button:hover,
-.wallet-button:focus { 
-  background-color: #16437E;
-  color: #ffffff;
+.wallet-button:focus {
+    background-color: #16437E;
+    color: #ffffff;
 }
 
 .wallet-button:active {
-  background: #09223b;
-  color: rgb(255, 255, 255, .7);
+    background: #09223b;
+    color: rgb(255, 255, 255, .7);
 }
 
-.wallet-button:disabled { 
-  cursor: not-allowed;
-  background: rgba(0, 0, 0, .08);
-  color: rgba(0, 0, 0, .3);
+.wallet-button:disabled {
+    cursor: not-allowed;
+    background: rgba(0, 0, 0, .08);
+    color: rgba(0, 0, 0, .3);
 }
 
 
-.convert-container{
+.convert-container {
     display: flex;
     flex-direction: column;
 }
 
-.to-euro-container{
+.to-euro-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin-bottom: 4vh;
 }
 
-.to-dollar-container{
+.to-dollar-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-.conversion-info-container{
-    
-}
-.conversion-info-link{
-    
-}
+.conversion-info-container {}
+
+.conversion-info-link {}
 
 
 
@@ -151,6 +153,7 @@
 .shop-container {
     width: 50vw;
     height: 100vh;
+    padding-right: 5vw;
 }
 
 .shop-title-container {
@@ -160,11 +163,33 @@
 
 .shop-title {}
 
-.search-container{
+.search-container {}
 
-}
-.search-bar{
-    margin-left: 4vw;
+.search-bar {
+    margin-left: 2vw;
     height: 5vh;
-    width: 40vw;
+    width: 30%;
+}
+
+.shop-table {
+    border-collapse: collapse;
+    width: 65%;
+    margin-top: 5vh;
+    margin-left: 2vw;
+    margin-right: 5vw;
+}
+
+th,
+td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+}
+
+.table-item {}
+
+.table-price {}
+
+.table-manufacturer {
+    width: 15%;
 }
